--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,13 @@
         </activity>
         <activity android:name=".foodList" />
         <activity android:name=".newsList" />
-        <activity android:name=".OCTranspo"></activity>
+        <activity android:name=".OCTranspo" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.MovieMain" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.MovieDetails" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.SavedMovieDetails" />
-        <activity android:name=".OCTranspoStopInfo"></activity>
+        <activity android:name=".OCTranspoStopInfo" />
+        <activity android:name=".OCTranspoRouteInfo" />
+        <activity android:name=".OCTranspoRouteDetails"></activity>
     </application>
 
 </manifest>
