--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,15 @@
         </activity>
         <activity android:name=".foodList" />
         <activity android:name=".newsList" />
-        <activity android:name=".OCTranspo"></activity>
+        <activity android:name=".OCTranspo" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.MovieMain" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.MovieDetails" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.SavedMovieDetails" />
-        <activity android:name=".FetchFood"></activity>
+        <activity android:name=".FetchFood" />
+        <activity android:name=".FoodDetails" />
+        <activity android:name=".NewsDetails" />
+        <activity android:name=".FavoriteNews" />
+        <activity android:name=".FaveNewsDetails"></activity>
     </application>
 
 </manifest>
