Inital commit of movie portion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OCTranspo">
+        <activity android:name=".OCTranspo" />
+        <activity android:name=".FavoriteNews" />
+        <activity android:name=".FaveNewsDetails" />
+        <activity android:name=".FetchFood" />
+        <activity android:name=".FoodDetails" />
+        <activity android:name=".foodList" />
+        <activity android:name=".NewsDetails" />
+        <activity android:name=".newsList" />
 
-        </activity>
+
         <activity android:name="com.example.tylercrozman.tylerfinalportion.MovieMain" />
         <activity android:name="com.example.tylercrozman.tylerfinalportion.MovieDetails" />
-        <activity android:name="com.example.tylercrozman.tylerfinalportion.SavedMovieDetails" />
-        <activity android:name=".foodList" />
         <activity android:name=".newsList"></activity>
     </application>
 
